--- a/src/themes/styles/globals.css
+++ b/src/themes/styles/globals.css
@@ -632,12 +632,12 @@ ol li span {
   --button-secondary-hover: #f2f2f2;
 
   display: grid;
-  grid-template-rows: 20px 1fr 20px;
+  /* grid-template-rows: 20px 1fr 20px; */
   align-items: center;
   justify-items: center;
   min-height: 100svh;
-  padding: 80px;
-  gap: 64px;
+  /* padding: 80px; */
+  /* gap: 64px; */
   font-family: var(--font-geist-sans);
 }
 
