--- a/src/themes/styles/globals.css
+++ b/src/themes/styles/globals.css
@@ -693,7 +693,7 @@ ol li span {
 .main {
   display: flex;
   flex-direction: column;
-  gap: 32px;
+  /* gap: 32px; */
   grid-row-start: 2;
   width: 100%;
   max-width: 1200px;
